force-app/main/default/objects/Order_WebCommercal__c/Order_WebCommercal__c.object-meta.xml
<CustomObject>
    <label>Order WebCommercal</label>
    <nameField>
        <label>Order WebCommercal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order WebCommercals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>