force-app/main/default/objects/Order_WebCommercal__c/fields/Cancel_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Time__c</fullName>
    <label>Cancel Time</label>
    <type>DateTime</type>
</CustomField>