force-app/main/default/objects/Order_WebCommercal__c/fields/company_address__c.field-meta.xml
<CustomField>
    <fullName>company_address__c</fullName>
    <label>company address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>