force-app/main/default/objects/Order_WebCommercal__c/fields/company_info__c.field-meta.xml
<CustomField>
    <fullName>company_info__c</fullName>
    <label>company info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>