force-app/main/default/objects/Order_WebCommercal__c/fields/dealer_code__c.field-meta.xml
<CustomField>
    <fullName>dealer_code__c</fullName>
    <label>dealer code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>