force-app/main/default/objects/Order_WebCommercal__c/fields/ID_Primary_Order__c.field-meta.xml
<CustomField>
    <fullName>ID_Primary_Order__c</fullName>
    <label>ID Primary Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>