force-app/main/default/objects/Order_WebCommercal__c/fields/invoice_require__c.field-meta.xml
<CustomField>
    <fullName>invoice_require__c</fullName>
    <label>invoice_require</label>
    <length>255</length>
    <type>Text</type>
</CustomField>