force-app/main/default/objects/Order_WebCommercal__c/fields/Is_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment</label>
    <type>Checkbox</type>
</CustomField>