force-app/main/default/objects/Order_WebCommercal__c/fields/Log_CMS__c.field-meta.xml
<CustomField>
    <fullName>Log_CMS__c</fullName>
    <label>Log CMS</label>
    <type>TextArea</type>
</CustomField>