force-app/main/default/objects/Order_WebCommercal__c/fields/Non_Resident__c.field-meta.xml
<CustomField>
    <fullName>Non_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Resident</label>
    <type>Checkbox</type>
</CustomField>