force-app/main/default/objects/Order_WebCommercal__c/fields/Order_ID_CMS__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_CMS__c</fullName>
    <label>Order ID CMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>