force-app/main/default/objects/Order_WebCommercal__c/fields/payment_method__c.field-meta.xml
<CustomField>
    <fullName>payment_method__c</fullName>
    <label>payment method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>