force-app/main/default/objects/Order_WebCommercal__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thanh toán thành công</fullName>
            </value>
            <value>
                <fullName>Thanh toán thất bại</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>