force-app/main/default/objects/Order_WebCommercal__c/fields/promotion_code__c.field-meta.xml
<CustomField>
    <fullName>promotion_code__c</fullName>
    <label>promotion code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>