force-app/main/default/objects/Order_WebCommercal__c/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <label>Promotion Item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>