force-app/main/default/objects/Order_WebCommercal__c/fields/Reason_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancel__c</fullName>
    <label>Reason Cancel</label>
    <type>TextArea</type>
</CustomField>