force-app/main/default/objects/Order_WebCommercal__c/fields/Receive_address__c.field-meta.xml
<CustomField>
    <fullName>Receive_address__c</fullName>
    <label>Receive address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>