force-app/main/default/objects/Order_WebCommercal__c/fields/receive_district__c.field-meta.xml
<CustomField>
    <fullName>receive_district__c</fullName>
    <label>receive district</label>
    <length>255</length>
    <type>Text</type>
</CustomField>