force-app/main/default/objects/Order_WebCommercal__c/fields/receive_ward__c.field-meta.xml
<CustomField>
    <fullName>receive_ward__c</fullName>
    <label>receive ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>