force-app/main/default/objects/Order_WebCommercal__c/fields/recevie_province__c.field-meta.xml
<CustomField>
    <fullName>recevie_province__c</fullName>
    <label>recevie province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>