force-app/main/default/objects/Order_WebCommercal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Đặt hàng thành công</fullName>
                <default>true</default>
                <label>Đặt hàng thành công</label>
            </value>
            <value>
                <fullName>DO/DL tiếp nhận thông tin</fullName>
            </value>
            <value>
                <fullName>Đang xử lý</fullName>
            </value>
            <value>
                <fullName>Hoàn thành</fullName>
            </value>
            <value>
                <fullName>Chưa thanh toán</fullName>
            </value>
            <value>
                <fullName>Hủy thành công</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>