force-app/main/default/objects/Order_WebCommercal__c/fields/tax_number__c.field-meta.xml
<CustomField>
    <fullName>tax_number__c</fullName>
    <label>tax number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>