force-app/main/default/objects/Order_WebCommercal__c/fields/Web_Source_PCA__c.field-meta.xml
<CustomField>
    <fullName>Web_Source_PCA__c</fullName>
    <label>Web Source PCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revzone</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
                <isActive>false</isActive>
                <label>E-Commerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>