force-app/main/default/objects/Order_WebCommercal__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Order_ID_CMS__c</columns>
    <columns>Receive_address__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>payment_method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_id__c</columns>
    <columns>dealer_code__c</columns>
    <columns>Order_Type__c</columns>
    <columns>receive_ward__c</columns>
    <columns>receive_district__c</columns>
    <columns>recevie_province__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>